-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8u5, 8u25, 8u40
-
Component/s: javafx
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8141335 | 8u92 | Arunprasad Rajkumar | P3 | Resolved | Fixed | b02 |
Test transitions/created-while-suspended.html fails.
It probably is a harness issue, as test lacks some harness-generated output.
This is a newly added test.
It probably is a harness issue, as test lacks some harness-generated output.
This is a newly added test.
- backported by
-
JDK-8141335 Test transitions/created-while-suspended.html fails
-
- Resolved
-