8090292: Test transitions/created-while-suspended.html fails

Reviewed-by: azvegint, ghb